--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,13 @@
 # Starter pipeline
+
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      wget https://github.com/insidersec/insiderci/releases/latest/download/insiderci_linux_x86_64.tar.gz -q 
+      tar -xf insiderci_linux_x86_64.tar.gz
+      chmod +x ./insiderci
+      ./insiderci -email "USUARIO" -password "SENHA" -score "SCORE" -component "ID_COMPONENTE"  "ARQUIVO"
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
