Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,12 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
   
-- task: Bash@3
+- task: PowerShell@2
   inputs:
     targetType: 'inline'
     script: |
       wget https://github.com/insidersec/insiderci/releases/latest/download/insiderci_linux_x86_64.tar.gz -q 
-      tar -xf insiderci_linux_x86_64.tar.gz
-      chmod +x ./insiderci
+      tar -xf insiderci_linux_x86_64.tar.gz chmod +x ./insiderci
       ./insiderci -email "USUARIO" -password "SENHA" -score "SCORE" -component "ID_COMPONENTE"  "ARQUIVO"
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
